src/test/deca/context/invalid/renduInitial/07doubledecl.res
/user/1/.base/lennea/home/Projet_GL/src/test/deca/context/invalid/renduInitial/07doubledecl.deca:2:14: DeclVar name Invalide !
